# MercuryCAN

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/list/: container.hpp  element.hpp
src/controller/: driver.cpp  driver.hpp  receiver.cpp  receiver.hpp  transmitter.cpp  transmitter.hpp
src/generic/list/: container.hpp  element.hpp  iterator.hpp
src/model/: cyclicMessage.hpp  message.hpp  signal.hpp
